[feat: paginated all required_api_responses]